--- a/.github/workflows/comment_run_ci.yml
+++ b/.github/workflows/comment_run_ci.yml
@@ -1,40 +1,56 @@
-name: "run from comment by pr"
+name: deploy dev from feature by pull request
 
+# (0) issueのコメント生成をハンドリング
 on:
   issue_comment:
-    types: [created, edited]
+    types:
+      - created
 
 jobs:
-  test:
-    if: (github.event.issue.pull_request != null) && startsWith(github.event.comment.body, '!github test_run')
-
+  deploy:
+    # add comment of pull request && comment is KEYWORD
+    if: (github.event.issue.pull_request != null) && github.event.comment.body == 'test-run'
     runs-on: ubuntu-latest
+
     steps:
       - run: echo "hello"
-    # services:
-    #   mysql:
-    #     image: mysql:8.0.19
-    #     ports:
-    #       - 3306:3306
-    #     options: --health-cmd "mysqladmin ping -h localhost" --health-interval 20s --health-timeout 10s --health-retries 10
-    #     env:
-    #       MYSQL_ROOT_PASSWORD: root
-    #       MYSQL_DATABASE: laravel_test
-    # env:
-    #   DB_CONNECTION: mysql
-    #   DB_HOST: 127.0.0.1
-    #   DB_PORT: 3306
-    #   DB_DATABASE: laravel_test
-    #   DB_USERNAME: root
-    #   DB_PASSWORD: root
+# name: "run from comment by pr"
 
-    # steps:
-    #   - uses: actions/checkout@2
-    #     with:
-    #       ref: ${{ steps.get_branch.outputs.branch }}
-    #   - name: composer install
-    #     run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    #   - name: migrate and seed
-    #     run: php artisan migrate --seed --env=testing
-    #   - name: run test
-    #     run: composer test-run
+# on:
+#   issue_comment:
+#     types: [created, edited]
+
+# jobs:
+#   test:
+#     if: (github.event.issue.pull_request != null) && startsWith(github.event.comment.body, '!github test_run')
+
+#     runs-on: ubuntu-latest
+#     steps:
+#       - run: echo "hello"
+# services:
+#   mysql:
+#     image: mysql:8.0.19
+#     ports:
+#       - 3306:3306
+#     options: --health-cmd "mysqladmin ping -h localhost" --health-interval 20s --health-timeout 10s --health-retries 10
+#     env:
+#       MYSQL_ROOT_PASSWORD: root
+#       MYSQL_DATABASE: laravel_test
+# env:
+#   DB_CONNECTION: mysql
+#   DB_HOST: 127.0.0.1
+#   DB_PORT: 3306
+#   DB_DATABASE: laravel_test
+#   DB_USERNAME: root
+#   DB_PASSWORD: root
+
+# steps:
+#   - uses: actions/checkout@2
+#     with:
+#       ref: ${{ steps.get_branch.outputs.branch }}
+#   - name: composer install
+#     run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+#   - name: migrate and seed
+#     run: php artisan migrate --seed --env=testing
+#   - name: run test
+#     run: composer test-run
