--- a/.github/workflows/comment_run_ci.yml
+++ b/.github/workflows/comment_run_ci.yml
@@ -3,8 +3,7 @@ name: deploy dev from feature by pull request
 # (0) issueのコメント生成をハンドリング
 on:
   issue_comment:
-    types:
-      - created
+    types: [created, edited]
 
 jobs:
   deploy:
