--- a/.github/workflows/comment_run_ci.yml
+++ b/.github/workflows/comment_run_ci.yml
@@ -6,9 +6,9 @@ on:
     types: [created, edited]
 
 jobs:
-  deploy:
+  test:
     # add comment of pull request && comment is KEYWORD
-    if: (github.event.issue.pull_request != null) && github.event.comment.body == 'hironeko-run'
+    if: (github.event.issue.pull_request != null) && github.event.comment.body == 'exec run'
     runs-on: ubuntu-latest
 
     steps:
