--- a/.github/workflows/comment_run_ci.yml
+++ b/.github/workflows/comment_run_ci.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     # add comment of pull request && comment is KEYWORD
-    if: (github.event.issue.pull_request != null) && github.event.comment.body == 'exec run'
+    if: github.event_name == 'issue_comment' && github.event.comment.body == 'exec run'
     runs-on: ubuntu-latest
 
     steps:
