--- a/.github/workflows/comment_run_ci.yml
+++ b/.github/workflows/comment_run_ci.yml
@@ -9,49 +9,34 @@ on:
 jobs:
   sample:
     # add comment of pull request && comment is KEYWORD
-    if: github.event_name == 'issue_comment' && github.event.comment.body == 'exec run'
+    if: github.event_name == 'issue_comment' && contains(github.event.comment.html_url, '/pull/') && github.event.comment.body == 'exec run'
     # if: github.event.comment.body == 'exec run'
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0.19
+        ports:
+          - 3306:3306
+        options: --health-cmd "mysqladmin ping -h localhost" --health-interval 20s --health-timeout 10s --health-retries 10
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: laravel_test
+    env:
+      DB_CONNECTION: mysql
+      DB_HOST: 127.0.0.1
+      DB_PORT: 3306
+      DB_DATABASE: laravel_test
+      DB_USERNAME: root
+      DB_PASSWORD: root
+
     steps:
-      - run: echo 'fuga'
-# name: "run from comment by pr"
-
-# on:
-#   issue_comment:
-#     types: [created, edited]
-
-# jobs:
-#   test:
-#     if: (github.event.issue.pull_request != null) && startsWith(github.event.comment.body, '!github test_run')
-
-#     runs-on: ubuntu-latest
-#     steps:
-#       - run: echo "hello"
-# services:
-#   mysql:
-#     image: mysql:8.0.19
-#     ports:
-#       - 3306:3306
-#     options: --health-cmd "mysqladmin ping -h localhost" --health-interval 20s --health-timeout 10s --health-retries 10
-#     env:
-#       MYSQL_ROOT_PASSWORD: root
-#       MYSQL_DATABASE: laravel_test
-# env:
-#   DB_CONNECTION: mysql
-#   DB_HOST: 127.0.0.1
-#   DB_PORT: 3306
-#   DB_DATABASE: laravel_test
-#   DB_USERNAME: root
-#   DB_PASSWORD: root
-
-# steps:
-#   - uses: actions/checkout@2
-#     with:
-#       ref: ${{ steps.get_branch.outputs.branch }}
-#   - name: composer install
-#     run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-#   - name: migrate and seed
-#     run: php artisan migrate --seed --env=testing
-#   - name: run test
-#     run: composer test-run
+      - uses: actions/checkout@2
+        with:
+          ref: ${{ steps.get_branch.outputs.branch }}
+      - name: composer install
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      - name: migrate and seed
+        run: php artisan migrate --seed --env=testing
+      - name: run test
+        run: composer test-run
