--- a/.github/workflows/comment_run_ci.yml
+++ b/.github/workflows/comment_run_ci.yml
@@ -10,7 +10,6 @@ jobs:
   sample:
     # add comment of pull request && comment is KEYWORD
     if: github.event_name == 'issue_comment' && contains(github.event.comment.html_url, '/pull/') && github.event.comment.body == 'exec run'
-    # if: github.event.comment.body == 'exec run'
     runs-on: ubuntu-latest
 
     services:
@@ -34,6 +33,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ steps.get_branch.outputs.branch }}
+      - name: composer -v
+        run: composer -v
       - name: composer install
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: migrate and seed
