--- a/.env.testing
+++ b/.env.testing
@@ -7,8 +7,8 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
+DB_HOST=127.0.0.1
+DB_PORT=3006
 DB_DATABASE=laravel_test
 DB_USERNAME=root
 DB_PASSWORD=root
@@ -19,7 +19,7 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=redis
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
