--- a/.github/workflows/comment_run_ci.yml
+++ b/.github/workflows/comment_run_ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   sample:
-    # if: github.event_name == 'issue_comment' && contains(github.event.comment.html_url, '/pull/') && github.event.comment.body == 'exec run'
+    if: github.event_name == 'issue_comment' && contains(github.event.comment.html_url, '/pull/') && github.event.comment.body == 'exec run'
     runs-on: ubuntu-latest
 
     services:
